# Gallery-Greeters

./: README.md
Control/obstacle_detection/: CMakeLists.txt  package.xml
Control/obstacle_detection/src/: obstacle_detection.cpp  obstacle_detection.hpp
Control/pController/: CMakeLists.txt  package.xml
Control/pController/src/: p_controller.cpp  p_controller.hpp
Environment/Models/barrels/: model.config  model.sdf
Environment/Models/barrels/Mesh/: barrels.stl
Environment/Models/gallery_floor/: model.config  model.sdf
Environment/Models/gallery_floor/Mesh/: EmptyGallery.stl  floor.dae
Environment/Models/statues/: model.config  model.sdf
Environment/Models/statues/Mesh/: statues.stl
Environment/Models/walls/: model.config  model.sdf
Environment/Models/walls/Mesh/: walls.dae  walls.stl
Environment/launch/: Gallery_Test2.launch.py
Environment/worlds/: Gallery_Test2.world
audio_messages/: CMakeLists.txt  logfile_2025-03-19_13-17-35.txt  logfile_2025-03-19_13-18-12.txt  logfile_2025-03-19_13-18-32.txt  logfile_2025-03-19_13-24-37.txt  logfile_2025-03-19_13-26-56.txt  logfile_2025-03-19_13-27-02.txt  logfile_2025-03-19_13-28-06.txt  logfile_2025-03-19_13-30-24.txt  logfile_2025-03-19_13-39-05.txt  logfile_2025-03-19_13-42-23.txt  logfile_2025-03-19_14-49-37.txt
audio_messages/msg/: AudioData.msg
audio_messages/src/: SpeechToText.py  audioStream.py  commands.py  record.py
template_match/: CMakeLists.txt  package.xml  setup.cfg  setup.py
template_match/share/template_match/hook/: pythonpath_develop.dsv  pythonpath_develop.ps1  pythonpath_develop.sh
template_match/template_match/: template_match.py
