<?xml version="1.0"?>
<package format="3">
  <name>template_match</name>  <!-- Updated package name (lowercase) -->
  <version>0.0.1</version>
  <description>ROS 2 package for template matching using OpenCV</description>
  <maintainer email="dylan.m.purbrick-1@student.uts.edu.au">dylan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>  <!-- ROS 2 Python client library -->
  <depend>opencv-python</depend>  <!-- OpenCV -->
  <depend>numpy</depend>  <!-- NumPy for array operations -->
  <depend>matplotlib</depend>  <!-- Matplotlib for visualization -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
